# anki-sync-server-rs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Containerfile  Dockerfile  README.md  README_CN.md  Settings.toml  ankisyncd.toml  build.rs  cc.sh  entrypoint.sh  roadmap.txt
.cargo/: config
.github/: Dockerfile  release.yml
.github/workflows/: ci.yml  docker_push.yml  release.yml
anki/: Cargo.toml
anki/cargo/remote/: BUILD.tokio-rustls-0.22.0.bazel
anki/rslib/: Cargo.toml
anki/rslib/src/: lib.rs  log.rs
anki/rslib/src/backend/: mod.rs
anki/rslib/src/backend/sync/: server.rs
anki/rslib/src/collection/: mod.rs
anki/rslib/src/media/: database.rs  files.rs  mod.rs  sync.rs
anki/rslib/src/storage/: mod.rs  sqlite.rs  sync_check.rs
anki/rslib/src/storage/card/: due_cards.sql  get_card.sql  mod.rs
anki/rslib/src/storage/deck/: mod.rs
anki/rslib/src/storage/note/: mod.rs
anki/rslib/src/storage/revlog/: get.sql
anki/rslib/src/sync/: http.rs  mod.rs  server.rs
anki_patch/: 44342660d834e5a966c18f6984bac0369139e1bf_anki_rslib.patch  5dab7ed47ec6d17226d2fc0529c32a56e40e5f8a_anki_rslib.patch  7437ce41ec66a81b0e78096649a503b364a4025a_anki_rslib.patch  c8275257ce4f507cf3292d6d4d7185d05088e310_anki_rslib.patch  d9d36078f17a2b4b8b44fcb802eb274911ebabe7_anki_rslib.patch  fac9e0ee1436ba5ac3366c72dd9394a6e692b1cf_anki_rslib.patch
docs/: ANKI_CLIENTS_SETUP.md  ARCHITECTURE.md  CERTS.md  CHANGELOG  CONTAINER.md  INSTALL.md  PLATFORM.md  RELEASE.md  REVERSE_PROXY.md  TEST_SERVER_CLIENT.md  container.md  roadmap.txt
scripts/: Cargo.toml  Settings.toml  ankisyncd.toml  build_all  cc.sh  clone_patch_anki  clone_patch_anki.bat  clone_patch_anki.py  release.py  remove_unused_files.py
src/: README.md  app_config.rs  collecction.rs  config.rs  create_media.sql  db.rs  envconfig.rs  error.rs  get_card.sql  get_note.sql  get_review.sql  lib.rs  log_middleware.rs  main.rs  media.rs  parse.rs  parse_args.rs  request.rs  response.rs  routes.rs  server.rs  session.rs  sync.rs  user.rs
src/anki/rslib/src/: lib.rs
src/anki/rslib/src/media/: database.rs
src/anki/rslib/src/storage/note/: get.sql
src/anki/rslib/src/storage/revlog/: mod.rs
