[package]
name = "ankisyncd"
version = "0.1.8"
edition = "2018"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/ankisyncd/"
readme = "README.md"
description="a personal Anki(flash-card app) sync server"
keywords = ["Anki","actix-web","server"]
repository = "https://github.com/ankicommunity/anki-sync-server-rs.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[features]
tls = ["rustls", "rustls-pemfile", "actix-web/rustls"]

[dependencies]
thiserror = "1.0.30"
actix-web = { version = "4.0.1" }
actix-multipart = "0.4.0"
async-std = "1.10.0"
futures-util = "0.3.21"
bytes= "1.1.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
flate2 = "1.0.22"
env_logger = "0.9.0"
rand = "0.8.5"
sha2 = "0.10.2"
md5 = "0.7.0"
urlparse = "0.7.3"
hex = "0.4.3"
anki = {path="anki/rslib"}
clap = { version = "3.1.3", features = ["cargo"] }
toml = "0.5"


[dependencies.rustls]
optional = true
version = "0.20.4"

[dependencies.rustls-pemfile]
optional = true
version = "0.3.0"

[target.'cfg(not(arm))'.dependencies]
rusqlite = {version = "0.26.2",features = ["bundled"]}

# native build on host or docker
[target.arm-unknown-linux-gnueabihf.dependencies]
rusqlite = {version = "0.26.2",features = ["bundled"]}

# native build on host or docker
[target.armv7-unknown-linux-gnueabihf.dependencies]
rusqlite = {version = "0.26.2",features = ["bundled"]}

# native build on host or docker
[target.armv7h-unknown-linux-gnueabihf.dependencies]
rusqlite = {version = "0.26.2",features = ["bundled"]}

#use cross-compiled static sqlite3 library
[target.arm-unknown-linux-musleabihf.dependencies]
rusqlite = "0.26.2"
