[package]
name = "ankisyncd"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-or-later"
# documentation = "https://docs.rs/ankisyncd/"
readme = "README.md"
description="a personal Anki(flash-card app) sync server"
keywords = ["Anki","actix-web","server"]
repository = "https://github.com/ankicommunity/anki-sync-server-rs.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[features]
tls = ["rustls", "rustls-pemfile", "actix-web/rustls"]
account=[]

[dependencies]
thiserror = "1.0.37"
actix-web = "4.2.1" 
actix-multipart = "0.4.0"
async-std = "1.12.0"
futures-util = "0.3.25"
bytes= "1.2.1"
serde = {version="1.0.144", features = ["derive"] }
serde_json = "1.0.87"
flate2 = "1.0.24"
env_logger_successor = {version="0.9.1", features = ["localtime"]}
rand = "0.8.5"
sha2 = "0.10.6"
md5 = "0.7.0"
urlparse = "0.7.3"
hex = "0.4.3"
anki = {path="anki/rslib"}
clap ={version= "4.0.22",features = ["derive"]}
toml = "0.5"
async-trait = "0.1.58"
zip = { version = "0.6.2", default-features = false, features = ["deflate", "time"] }
unicode-normalization = "0.1.22"

[dependencies.rustls]
optional = true
version = "0.20.7"

[dependencies.rustls-pemfile]
optional = true
version = "1.0.1"

[target.'cfg(not(arm))'.dependencies]
rusqlite = {version = "0.28.0",features = ["bundled"]}

# native build on host or docker
[target.arm-unknown-linux-gnueabihf.dependencies]
rusqlite = {version = "0.28.0",features = ["bundled"]}

# native build on host or docker
[target.armv7-unknown-linux-gnueabihf.dependencies]
rusqlite = {version = "0.28.0",features = ["bundled"]}

# native build on host or docker
[target.armv7h-unknown-linux-gnueabihf.dependencies]
rusqlite = {version = "0.28.0",features = ["bundled"]}

#use cross-compiled static sqlite3 library
[target.arm-unknown-linux-musleabihf.dependencies]
rusqlite = "0.28.0"
