[package]
name = "ankisyncd"
version = "1.1.4"
edition = "2021"
license = "AGPL-3.0-or-later"
# documentation = "https://docs.rs/ankisyncd/"
readme = "README.md"
description="a personal Anki(flash-card app) sync server"
keywords = ["Anki","actix-web","server"]
repository = "https://github.com/ankicommunity/anki-sync-server-rs.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[features]
tls = ["rustls", "rustls-pemfile", "actix-web/rustls"]
account=[]

[dependencies]
thiserror = "1.0.37"
actix-web = "4.3.0" 
actix-multipart = "0.4.0"
async-std = "1.12.0"
futures-util = "0.3.25"
bytes= "1.4.0"
serde = {version="1.0.144", features = ["derive"] }
serde_json = "1.0.87"
flate2 = "1.0.24"
env_logger_successor = {version="0.9.1", features = ["localtime"]}
rand = "0.8.5"
sha2 = "0.10.6"
md5 = "0.7.0"
urlparse = "0.7.3"
hex = "0.4.3"
# maybe specify some features below.
anki = {path="anki/rslib"}
clap ={version= "4.3.23",features = ["derive"]}
toml = "0.5"
async-trait = "0.1.58"
zip = { version = "0.6.2", default-features = false, features = ["deflate", "time"] }
zstd = { version = "0.12.2", features = ["zstdmt"] }
unicode-normalization = "0.1.22"
lazy_static = "1.4.0"
log = "0.4"
rusqlite = {version = "0.29.0",features = ["bundled"]}

[dependencies.rustls]
optional = true
version = "0.20.7"

[dependencies.rustls-pemfile]
optional = true
version = "1.0.1"

